Bug: overflowing titles in the post-grid

--- a/css/globals/templates/grid.less
+++ b/css/globals/templates/grid.less
@@ -36,6 +36,7 @@
     .flex(1);
     cursor: pointer;
     display: block;
+    overflow: hidden;
     position: relative;
 
     //account for chrome's non-standard scrollbar/viewport measurement
